deployments/observability/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources

            - name: dashboards-provider
              mountPath: /etc/grafana/provisioning/dashboards

            - name: dashboards-json
              mountPath: /etc/grafana/provisioning/dashboards-json


      volumes:
        - name: datasources
          configMap:
            name: grafana-datasources

        - name: dashboards-provider
          configMap:
            name: grafana-dashboards
            items:
              - key: provider.yaml
                path: provider.yaml

        - name: dashboards-json
          configMap:
            name: grafana-dashboards
            items:
              - key: cnf-dashboard.json
                path: cnf-dashboard.json
